Add most routes

--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
                 localStorage.getItem("theme") === "dark" ? "#222831" : "#f8f9fa"
         </script>
 
-        <title>Template: Axum / SolidJS</title>
+        <title>CQI 2025 QEC</title>
     </head>
     <body>
         <noscript>JavaScript must be enabled to view this website.</noscript>
