--- a/client/index.html
+++ b/client/index.html
@@ -1,26 +1,22 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <meta
-            name="description"
-            content="Full-stack SPA template using SolidJS, TypeScript, and Tailwind. Backed by Rust with Axum and PostgreSQL. "
-        />
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <script>
-            // We inline an initial theme check to prevent a FOUC.
-            document.documentElement.style.background =
-                localStorage.getItem("theme") === "dark" ? "#222831" : "#f8f9fa"
-        </script>
+    <meta name="description"
+        content="Full-stack SPA template using SolidJS, TypeScript, and Tailwind. Backed by Rust with Axum and PostgreSQL. " />
 
-        <title>CQI 2025 QEC</title>
-    </head>
-    <body>
-        <noscript>JavaScript must be enabled to view this website.</noscript>
-        <div id="app" />
-        <script type="module" src="./src/index.tsx"></script>
-    </body>
+
+    <title>CQI 2025 QEC</title>
+</head>
+
+<body>
+    <noscript>JavaScript must be enabled to view this website.</noscript>
+    <div id="app" />
+    <script type="module" src="./src/index.tsx"></script>
+</body>
+
 </html>
